--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,28 @@
-open-mover:
-  build: .
-  command: python3 /tmp/source/start.py
-  volumes:
-    - ./source:/tmp/source
-    - ./logs:/tmp/logs
-  environment:
-    - TERM=linux
-    - TERMINFO=/etc/terminfo
+version: '3'
+services:
+
+  openstack-snapshot:
+    build: .
+    command: python3 /tmp/source/start.py
+    volumes:
+      - ./source:/tmp/source
+      - ./logs:/tmp/logs
+    networks:
+      - openstack-scripts
+    environment:
+      - TERM=linux
+      - TERMINFO=/etc/terminfo
+      - STORAGE_MANAGER_IP=${STORAGE_MANAGER_IP}
+      - STORAGE_MANAGER_PORT=${STORAGE_MANAGER_PORT}
+      - STORAGE_MANAGER_USERNAME=${STORAGE_MANAGER_USERNAME}
+      - STORAGE_MANAGER_PASSWORD=${STORAGE_MANAGER_PASSWORD}
+      - SAN_PASSWORD=${SAN_PASSWORD}
+
+networks:
+  openstack-scripts:
+    external:
+      name: openstack-scripts-external
+
+  ###
+  # Remember first time: docker network create openstack-scripts-external
+  ###
